--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "short_name": "React App",
+  "short_name": "Image Finder",
   "name": "Create React App Sample",
-  
+
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
